<package>
  <name>sherptr_msgs</name>
  <version>0.0.1</version>
  <description>Messages, services and actions used by SherPTr</description>
  <author email="mpomarlan@yahoo.co.uk">Mihai Pomarlan</author>
  <maintainer email="mpomarlan@yahoo.co.uk">Mihai Pomarlan</maintainer>

  <license>BSD</license>

  <url type="website">http://cram-system.org</url>
  <url type="bugtracker">https://github.com/mpomarlan/sherptr/issues</url>
  <url type="repository">https://github.com/mpomarlan/sherptr</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
